--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 asgiref==3.5.2
 certifi @ file:///C:/b/abs_ac29jvt43w/croot/certifi_1665076682579/work/certifi
 Django==4.1.3
+gunicorn==20.1.0
 sqlparse==0.4.3
 tzdata==2022.6
+whitenoise==6.2.0
 wincertstore==0.2
-whitenoise==5.3.0
